--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         </div>
         <div class="row" >
-            <div class="col-12" >
+            <div class="col-12"  id="backimage1">
                 <div class="row"id="first-image">
               <div class="col-3"></div>
               <div class="col-6">Carolina Barrios Amaro</div>
