--- a/index.html
+++ b/index.html
@@ -60,21 +60,21 @@
                 
                 <div class="col-4">
                     <div class="row" id="image-card"></div>
-                    <p class="row">Card Title</p>
+                    <p class="row"><b>Card Title</b></p>
                     <p class="row">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed beatae dignissimos distinctio! Dolorum aliquid hic quos fugiat magni, ut sequi pariatur incidunt ducimus dignissimos eligendi laborum autem voluptatum, quidem earum.</p>
                     <hr>
                     <div class="row"><button>Find out more!</button></div>
                 </div>
                 <div class="col-4">
                         <div class="row" id="image-card-2"></div>
-                        <p class="row">Card Title</p>
+                        <p class="row"><b>Card Title</b></p>
                         <p class="row" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed beatae dignissimos distinctio! Dolorum aliquid hic quos fugiat magni, ut sequi pariatur incidunt ducimus dignissimos eligendi laborum autem voluptatum, quidem earum.</p>
                         <hr>
                         <div class="row"><button>Find out more!</button></div>
                     </div>
                 <div class="col-4">
                         <div class="row" id="image-card-3"></div>
-                        <p class="row">Card Title</p>
+                        <p class="row"><b>Card Title</b></p>
                         <p class="row">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed beatae dignissimos distinctio! Dolorum aliquid hic quos fugiat magni, ut sequi pariatur incidunt ducimus dignissimos eligendi laborum autem voluptatum, quidem earum.</p>
                         <hr>
                         <div class="row"><button>Find out more!</button></div>
